--- a/css/educate-placeholdr.webflow.css
+++ b/css/educate-placeholdr.webflow.css
@@ -1,7 +1,77 @@
-#protagonist{
+.flickity-page-dots .dot{
+  background: white;
+}
+
+.flickity-button{
+  background: black;
+  border: 1px solid white;
+  color: white;
+}
+
+.flickity-button:hover{
+  background: black;
+  border: 1px solid white;
+  color: white;
+}
+
+/* sponsors */
+#mobile-sponsors{
   display: none;
 }
 
+@media screen and (max-width: 880px){
+  #mobile-sponsors{
+    display: block;
+  }
+
+  #sponsors{
+    display: none;
+  }
+}
+
+
+/* flickity START */
+.carousel {
+  background: #EEE;
+}
+
+.carousel-cell {
+  width: auto;
+  height: 200px;
+  margin-right: 10px;
+  background: transparent;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.carousel-cell img{
+    width: auto;
+    object-fit: contain;
+    max-height: 50px;
+}
+
+/* cell number */
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
+/* flickity END */
+
+
+#mobile-sponsors{
+  margin-top: 5rem;
+}
+
+
+#protagonist{
+  display: none;
+}
 
 .d-none{
   display: none !important;
@@ -32,16 +102,16 @@
 }
 
 
-/* sponsors */
+/* sponsors here */
 @media screen and (max-width: 991px){
   .sponsors-row{
     margin-top: 100px !important;
-    flex-wrap: wrap;
-    align-items: center;
+    display: flex;
+    justify-content: center;
   }
 
   .sponsors-row .col-6{
-    width: 50% !important;
+    width: 100% !important;
     display: flex !important;
     justify-content: center !important;
     margin-bottom: 60px;
@@ -64,9 +134,22 @@
   width: 100%;
   display: flex;
   justify-content: space-around;
+  gap: 3rem;
 }
 
+#sponsors img{
+  height: 200px;
+  width: auto;
+  object-fit: contain;
+}
+
+
+
+
 @media only screen and(max-width:768px){
+
+
+  
   
   .gif-container{
     width: 70%;
@@ -862,7 +945,7 @@
   }
   
   .footer {
-    background-color: #0c1019;
+    background-color: transparent;
     border: 1px solid #000;
     border-top-color: #333;
     justify-content: center;
