--- a/css/educate-placeholdr.webflow.css
+++ b/css/educate-placeholdr.webflow.css
@@ -1,3 +1,5 @@
+
+
 .flickity-page-dots .dot{
   background: white;
 }
@@ -66,6 +68,7 @@
 
 #mobile-sponsors{
   margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 
 
@@ -104,6 +107,13 @@
 
 /* sponsors here */
 @media screen and (max-width: 991px){
+
+
+  #title-fix{
+    margin-bottom: 0px !important;
+  }
+  
+
   .sponsors-row{
     margin-top: 100px !important;
     display: flex;
