--- a/css/educate-placeholdr.webflow.css
+++ b/css/educate-placeholdr.webflow.css
@@ -1,3 +1,47 @@
+.testimonials-container .f-feature-card-outlined{
+  max-width:740px;
+  margin-left: auto;
+  margin-right: auto;
+} 
+
+.testimonials-container .f-feature-card-outlined img{
+  border-radius: 12px !important;
+    height: fit-content !important;
+    padding-bottom: 0px !important;
+    padding-top: 0px !important;
+    margin-bottom: 30px !important;
+    margin-top:0px !important;
+}
+
+.testimonials-container .f-feature-card-outlined .linkedin-icon{
+  background: white;
+  border-radius: 7px !important;
+  width: 30px;
+  border: 0.3px solid white;
+}
+
+.testimonials-container .f-feature-card-outlined .website-icon{
+  border-radius: 20px !important;
+    width: 35px !important;
+    border-radius: 20px !important;
+    border: 0.3px solid white;
+    background: white;
+}
+
+.testimonial-links-container{
+  display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; 
+    gap: 1rem;
+}
+
+
+.testimonials-container .f-feature-card-outlined .linkedin-icon:hover, .testimonials-container .f-feature-card-outlined .website-icon:hover{
+  cursor: pointer;
+}
+
+
 /*  arrow buttons */
 .flickity-button{
   top: 13rem !important;
