--- a/css/educate-placeholdr.webflow.css
+++ b/css/educate-placeholdr.webflow.css
@@ -18,6 +18,7 @@
   border-radius: 7px !important;
   width: 30px;
   height: 30px !important;
+  max-height: 30px !important;
   border: 0.3px solid white;
 }
 
@@ -25,6 +26,7 @@
   border-radius: 20px !important;
     width: 35px !important;
     height: 35px !important;
+    max-height: 35px !important;
     border-radius: 20px !important;
     border: 0.3px solid white;
     background: white;
